Ticket #120 - Fixed missing padding

--- a/assets/src/sass/form-edit.scss
+++ b/assets/src/sass/form-edit.scss
@@ -62,6 +62,10 @@
 			}
 		}
 
+		.general-settings{
+			padding:15px;
+		}
+
 		#containers {
 			.container-tabs {
 				margin-bottom: 0;
